style.css
/* ... */
.card-element {
  display: flex;
  flex-direction: column;
  border: 2px solid #dfe1e6;
  background-color: #fff;
  width: auto;
  height: auto;
  margin-top: 4%;
  padding-left: 4%;
  padding-right: 4%;
  padding-top: 3%;
  padding-bottom: 3%;
  border-radius: 10px;
}

.preview-picture {
  order: 0;
  margin: auto;
  justify-content: center;
  min-width: 295px;
  min-height: 220px;
  width: 100%;
}

.project-name {
  order: 1;
  margin-top: 2%;
  margin-bottom: 1%;
  min-width: 295px;
  min-height: 36px;
  color: #172b4d;
  font-weight: 700;
  font-size: 32px;
}

.project-frame {
  order: 2;
  padding-left: 0;
  margin-top: 1%;
  margin-bottom: 2%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: baseline;
  width: 90%;
}

.project-frame li {
  min-width: 55px;
  min-height: 16px;
  font-weight: 600;
  font-size: 13px;
  color: #7a869a;
}

.card-main-text {
  order: 3;
  color: #344563;
  margin-top: 1%;
  text-align: left;
  font-weight: 400;
  font-size: 15px;
  line-height: 24px;
  min-width: 295px;
  min-height: 76px;
  padding-right: 10%;
}

.technology-tags {
  order: 4;
  display: flex;
  flex-direction: row;
  width: 60%;
  padding-left: 0;
  margin-bottom: 2%;
  justify-content: space-between;
  align-items: baseline;
}

.technology-tags li {
  list-style: none;
  min-height: 16px;
  font-weight: 500;
  font-size: 12px;
  line-height: 16px;
  color: #6070ff;
  background-color: #ebebff;
  border-radius: 10%;
  padding-left: 4%;
  padding-right: 4%;
}

.See-project-button {
  order: 5;
  border: 1px solid #396df2;
  border-radius: 10px;
  background-color: #fff;
  color: #396df2;
  padding: 12px;
  padding-left: 1%;
  padding-right: 1%;
  width: 126px;
  margin-top: 8%;
}

/*
  Works Section------Popup-Starts;
*/

.portfolio-pupUp-backgroundOpen {
  display: block;
  position: fixed;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
  box-sizing: border-box;
  padding-top: 18px;
  padding-bottom: 10%;
  padding-left: 9.8%;
  padding-right: 9.8%;
  background-color: rgba(193, 199, 208, 0.6);
  backdrop-filter: blur(8px);
}

.portfolio-pupUp-backgroundClose {
  display: none;
}

.porfolio_pop-up_main-container {
  display: flex;
  flex-direction: column;
  gap: 12px;
  padding-top: 18px;
  padding-bottom: 20px;
  padding-left: 4%;
  padding-right: 4%;
  background: #fff;
  border: 2px solid #dfe1e6;
  border-radius: 12px;
  box-sizing: border-box;
}

.porfolio_pop-up_header {
  display: flex;
  order: 0;
  flex-direction: column;
}

.porfolio_pop-up_header .pop-up-top {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.pop-up_project-frame {
  margin: 0;
  padding-left: 0;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: baseline;
  font-size: 75%;
  width: 75%;
}

.pop-up_project-frame li {
  color: #7a869a;
  font-weight: 600;
}

.pop-up-top h2 {
  margin: 0;
}

.preview {
  max-height: 30vh;
  width: auto;
}

.buttons-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}

.buttons-container button {
  width: 48%;
  display: flex;
  gap: 10%;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

#portfolioPopUpCloseBtn {
  border: 0;
  background-color: rgba(0, 0, 0, 0);
}

/*
  Works Section------PopUp-ends;
*/

/*
Work Section Ends---------------------------
/*
  about myself section
*/

.about-me-wrap {
  display: flex;
  flex-direction: column;
  background: #fff;
  border-radius: 0 50px 0 0;
  padding-left: 6%;
  padding-right: 6%;
  padding-top: 10%;
  padding-bottom: 35%;
  margin-top: 200px;
}

.about-me-wrap h2 {
  color: #172b4d;
  font-weight: 700;
  font-size: 40px;
}

.about-me-icons {
  width: 65%;
  margin-top: 4%;
}

.getResumeButton {
  order: 4;
  width: 50%;
  padding: 3%;
  border-radius: 5px;
  color: #396df2;
  border: 1px solid #396df2;
  background-color: rgba(0, 0, 0, 0);
  font-size: 100%;
}

.skill-list-container {
  order: 5;
  display: flex;
  flex-direction: column;
  margin-top: 50px;
}

.skill-section {
  line-height: 24px;
  color: black;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  margin: 0;
}

.skill-section figcaption {
  display: flex;
  justify-content: space-between;
}

.skill-section ul {
  padding: 2%;
  list-style: none;
}

.skill-section li {
  display: flex;
  background: #f7f7f9;
  margin-top: 3%;
  margin-bottom: 3%;
  border-radius: 5px;
  align-items: center;
  padding: 2%;
  padding-left: 5%;
  padding-right: 5%;
  width: 100%;
  box-sizing: border-box;
}

.skill-list-container .skill-icon {
  flex: 1 1 auto;
}

.skill-list-container span {
  padding-left: 5%;
  flex: 9 1 auto;
  text-align: left;
}

/*
contact me section
 */

.contact-me-container {
  background-color: #6070ff;
  background-image: url(./img/form-background-contactme.png);
  background-position-x: right;
  background-repeat: no-repeat;
  background-size: 63%;
  display: flex;
  flex-direction: column;
  margin-top: -20%;
  margin-bottom: 0;
  padding-left: 6%;
  padding-right: 6%;
  padding-top: 25%;
  padding-bottom: 15%;
  border-radius: 100px 0 0 0;
  box-sizing: border-box;
}

.contact-me-container p,
.contact-me-container h2 {
  color: whitesmoke;
  text-align: center;
  align-self: center;
  font-size: 1.25rem;
}

.contact-me-container h2 {
  font-size: 2.9rem;
  margin-bottom: 0;
  margin-top: 0;
}

.contac-form {
  margin-right: 0;
}

.contac-form ul {
  padding-left: 0;
}

.contac-form input,
#get-in-touch {
  margin-top: 3%;
  margin-bottom: 3%;
  border-radius: 5px;
  padding: 4%;
  border: 0;
  color: #6070ff;
  width: 100%;
  align-self: center;
  box-sizing: border-box;
}

#user-message {
  width: 100%;
  border-radius: 5px;
  border: 0;
  padding: 4%;
  margin-top: 3%;
  box-sizing: border-box;
}
/* ... */

